# ereolenWrapper

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  tests.nix  uwa.acsm
.github/workflows/: nix-tests.yml
.run/: ereolenwrappertests.run.xml
cmake/: Config.cmake.in
libs/cpr/: default.nix
libs/libgourou/: default.nix  devendor.patch
libs/luabridge/: default.nix
libs/unity/: default.nix
libs/updfparser/: default.nix
src/: CMakeLists.txt  ereolenwrapper.cpp
src/main/: ApiEnv.cpp  ApiEnv.h  Auth.cpp  Auth.h  CMakeLists.txt  Item.cpp  Item.h  Profile.cpp  Profile.h  ereolenwrapper.cpp
src/main/lua/: LuaInterface.cpp  LuaInterface.h  ResponseLua.h
src/main/model/: ChecklistItem.cpp  ChecklistItem.h  Contributor.cpp  Contributor.h  Facet.cpp  Facet.h  Language.cpp  Language.h  Library.cpp  Library.h  LibraryProfile.cpp  LibraryProfile.h  LoanActive.cpp  LoanActive.h  LoanHistorical.cpp  LoanHistorical.h  LoanIdentifier.cpp  LoanIdentifier.h  MediaType.cpp  MediaType.h  PageResult.cpp  PageResult.h  Product.cpp  Product.h  ProductType.h  QuerySettings.cpp  QuerySettings.h  Record.cpp  Record.h  RecordType.cpp  RecordType.h  Reservation.cpp  Reservation.h  Response.cpp  Response.h  Review.cpp  Review.h  RpcPayload.cpp  RpcPayload.h  Term.cpp  (+3 more)
src/main/structs/: ChecklistItem.cpp  ChecklistItem.h  Contributor.h  Library.h  LibraryProfile.h  LoanActive.cpp  LoanActive.h  LoanHistorical.cpp  LoanHistorical.h  LoanIdentifier.cpp  LoanIdentifier.h  Mystruct.h  Product.h  Reservation.cpp  Reservation.h  RpcPayload.cpp  RpcPayload.h  Token.cpp  Token.h  tmp.h
src/main/structs2/: ChecklistItem.h  Contributor.h  LibraryProfile.h  Loan.h  LoanHistoryElement.h  Reservation.h
src/main/util/: ApiCaller.h  ErrorResponse.h  HAHA.h  HelperFunctions.h  InterfaceUtilC.cpp  InterfaceUtilC.h  JSONHelper.h
src/test/: ApiEnvTests.cpp  AuthTests.cpp  BaseTestHelper.cpp  BaseTestHelper.h  CInterfaceTests.c  CMakeLists.txt  ItemTests.cpp  ProfileTests.cpp  Secrets.cpp  Secrets.h  ereolenWrapperTests.cpp
src/test/c-interface/: CMakeLists.txt  StructTests.c  TestProductionCode.c  TestProductionCode2.c  tests.nix
src/test/c-interface/src/: CMakeLists.txt  ProductionCode.c  ProductionCode.h
src/test/c-interface/test/: CMakeLists.txt  TestProductionCode.c  TestProductionCode2.c
src/test/c-interface/test/test_runners/: TestProductionCode_Runner.c
src/test/c-interface/test_runners/: StructTests_Runner.c  TestProductionCode2_Runner.c  all_tests.c
src/test/mock-server/: AuthAPI.py  ItemAPI.py  MiscAPI.py  ProfileAPI.py  SearchAPI.py  app.py  common.py
